--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,19 @@
 @import "tailwindcss";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  direction: rtl;
+}
+
+body {
+  text-align: right;
+  font-feature-settings: "ss01" 1, "ss02" 1;
+}
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -23,4 +37,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  text-align: right;
+
 }
+
